Group related configs

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -278,9 +278,6 @@
       </ul>
     </fieldset>
 
-    <p><label><input id="autoGroupNewTabsFromPinned"
-                     type="checkbox">
-              __MSG_config_autoGroupNewTabsFromPinned_label__</p>
     <fieldset>
       <legend>__MSG_config_insertNewTabFromPinnedTabAt_caption__</legend>
       <ul>
@@ -296,18 +293,25 @@
       </ul>
     </fieldset>
 
-    <p><label><input id="autoGroupNewTabs"
-                     type="checkbox">
-              __MSG_config_autoGroupNewTabs_before__
-              <input id="autoGroupNewTabsTimeout"
-                     type="number"
-                     size="3">
-               __MSG_config_autoGroupNewTabs_after__</label></p>
-    <p class="sub"><label>__MSG_config_autoGroupNewTabsDelayOnNewWindow_before__
-                          <input id="autoGroupNewTabsDelayOnNewWindow"
-                                 type="number"
-                                 size="3">
-                          __MSG_config_autoGroupNewTabsDelayOnNewWindow_after__</label></p>
+    <fieldset>
+      <legend>__MSG_config_groupTab_caption__</legend>
+      <p><label><input id="autoGroupNewTabs"
+                       type="checkbox">
+                __MSG_config_autoGroupNewTabs_before__
+                <input id="autoGroupNewTabsTimeout"
+                       type="number"
+                       size="3">
+                 __MSG_config_autoGroupNewTabs_after__</label></p>
+      <p class="sub"><label>__MSG_config_autoGroupNewTabsDelayOnNewWindow_before__
+                            <input id="autoGroupNewTabsDelayOnNewWindow"
+                                   type="number"
+                                   size="3">
+                            __MSG_config_autoGroupNewTabsDelayOnNewWindow_after__</label></p>
+      <p><label><input id="autoGroupNewTabsFromPinned"
+                       type="checkbox">
+                __MSG_config_autoGroupNewTabsFromPinned_label__</p>
+    </fieldset>
+
     </section>
 
 
