Add autoamted tests (experimental)

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -519,6 +519,7 @@
     <ul>
       <li><a id="link-startupPage" target="_blank">__MSG_config_link_startupPage_label__</a></li>
       <li><a id="link-groupPage" target="_blank">__MSG_config_link_groupPage_label__</a></li>
+      <li><a id="link-runTests" target="_blank">__MSG_config_runTests_label__</a></li>
     </ul>
     <p><label><input id="loggingQueries"
                      type="checkbox">
