--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -519,7 +519,13 @@
     <ul>
       <li><a id="link-startupPage" target="_blank">__MSG_config_link_startupPage_label__</a></li>
       <li><a id="link-groupPage" target="_blank">__MSG_config_link_groupPage_label__</a></li>
-      <li><a id="link-runTests" target="_blank">__MSG_config_runTests_label__</a></li>
+      <li><a id="link-runTests" target="_blank">__MSG_config_runTests_label__</a>
+        <ul>
+          <li><label><input id="tabHidePermissionGranted"
+                            type="checkbox">
+                __MSG_config_requestPermissions_tabHide__</label></li>
+        </ul>
+      </li>
     </ul>
     <p><label><input id="loggingQueries"
                      type="checkbox">
