--- a/webextensions/tests/runner.html
+++ b/webextensions/tests/runner.html
@@ -16,11 +16,11 @@
         white-space: pre-wrap;
       }
 
-      ul#logs li.failure {
+      ul#logs li.failure .description {
         background: pink;
       }
 
-      ul#logs li.error {
+      ul#logs li.error .description {
         background: orange;
       }
 
