--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -204,7 +204,8 @@
                 <option value="2">__MSG_config_autoAttachOnNewTabButtonMiddleClick_sibling__</option>
                 <option value="3">__MSG_config_autoAttachOnNewTabButtonMiddleClick_nextSibling__</option>
               </select>
-              __MSG_config_autoAttachOnNewTabButtonMiddleClick_after__</label></p>
+              __MSG_config_autoAttachOnNewTabButtonMiddleClick_after__
+              <span class="preview-image"></span></label></p>
     <p><label>__MSG_config_longPressOnNewTabButton_before__
               <select id="longPressOnNewTabButton">
                 <option value="newtab-action-selector">__MSG_config_longPressOnNewTabButton_newTabAction__</option>
@@ -228,7 +229,8 @@
                 <option value="2">__MSG_config_autoAttachOnNewTabCommand_sibling__</option>
                 <option value="3">__MSG_config_autoAttachOnNewTabCommand_nextSibling__</option>
               </select>
-              __MSG_config_autoAttachOnNewTabCommand_after__</label></p>
+              __MSG_config_autoAttachOnNewTabCommand_after__
+              <span class="preview-image"></span></label></p>
     <p class="sub"><label><input id="guessNewOrphanTabAsOpenedByNewTabCommand"
                                  type="checkbox">
                           __MSG_config_guessNewOrphanTabAsOpenedByNewTabCommandUrl_before__
@@ -242,7 +244,8 @@
                 <option value="2">__MSG_config_autoAttachOnDuplicated_sibling__</option>
                 <option value="3">__MSG_config_autoAttachOnDuplicated_nextSibling__</option>
               </select>
-              __MSG_config_autoAttachOnDuplicated_after__</label></p>
+              __MSG_config_autoAttachOnDuplicated_after__
+              <span class="preview-image"></span></label></p>
     </fieldset>
     <p><label><input id="inheritContextualIdentityToNewChildTab"
                      type="checkbox">
@@ -257,7 +260,8 @@
                   <option value="2">__MSG_config_autoAttachSameSiteOrphan_sibling__</option>
                   <option value="3">__MSG_config_autoAttachSameSiteOrphan_nextSibling__</option>
                 </select>
-                __MSG_config_autoAttachSameSiteOrphan_after__</label></p>
+                __MSG_config_autoAttachSameSiteOrphan_after__
+              <span class="preview-image"></span></label></p>
       <p><label><input id="inheritContextualIdentityToSameSiteOrphan"
                        type="checkbox">
                 __MSG_config_inheritContextualIdentityToSameSiteOrphan_label__</label></p>
