--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -554,7 +554,7 @@
             <p><label><input id="logFor-common/json-cache" type="checkbox">common/json-cache</label></p>
             <p><label><input id="logFor-common/migration" type="checkbox">common/migration</label></p>
             <p><label><input id="logFor-common/permissions" type="checkbox">common/permissions</label></p>
-            <p><label><input id="logFor-common/sidebar-status" type="checkbox">common/sidebar-status</label></p>
+            <p><label><input id="logFor-common/sidebar" type="checkbox">common/sidebar</label></p>
             <p><label><input id="logFor-common/tabs-group" type="checkbox">common/tabs-group</label></p>
             <p><label><input id="logFor-common/tabs-internal-operation" type="checkbox">common/tabs-internal-operation</label></p>
             <p><label><input id="logFor-common/tabs-move" type="checkbox">common/tabs-move</label></p>
