Introduce module to manage connection from sidebar to background

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -586,6 +586,7 @@
         </fieldset>
         <fieldset>
           <legend><label><input id="logFor-sidebar" type="checkbox">__MSG_config_logFor_sidebar__</label></legend>
+            <p><label><input id="logFor-sidebar/background" type="checkbox">sidebar/background</label></p>
             <p><label><input id="logFor-sidebar/collapse-expand" type="checkbox">sidebar/collapse-expand</label></p>
             <p><label><input id="logFor-sidebar/color" type="checkbox">sidebar/color</label></p>
             <p><label><input id="logFor-sidebar/dom-cache" type="checkbox">sidebar/dom-cache</label></p>
