--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -88,6 +88,7 @@
     </ul>
     <div id="blocking-screen">
       <span class="throbber"></span>
+      <progress max="100" value="0"></progress>
     </div>
 
     <ul id="tabContextMenu">
