Add an option to deactivate browser theme color #2197

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -615,6 +615,9 @@
                        name="colorScheme" value="system-color">
            __MSG_config_colorScheme_systemColor__</label>
       </p>
+      <p><label><input type="checkbox"
+                       name="applyBrowserTheme">
+           __MSG_config_applyBrowserTheme_label__</label></p>
       <p><label><input id="acceleratedTabCreation"
                        type="checkbox">
                __MSG_config_acceleratedTabCreation_label__</label></p>
