Put commands.js under background

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -548,7 +548,6 @@
             <p><label><input id="logFor-common/Window" type="checkbox">common/Window</label></p>
             <p><label><input id="logFor-common/api-tabs" type="checkbox">common/api-tabs</label></p>
             <p><label><input id="logFor-common/bookmarks" type="checkbox">common/bookmarks</label></p>
-            <p><label><input id="logFor-common/commands" type="checkbox">common/commands</label></p>
             <p><label><input id="logFor-common/contextual-identities" type="checkbox">common/contextual-identities</label></p>
             <p><label><input id="logFor-common/json-cache" type="checkbox">common/json-cache</label></p>
             <p><label><input id="logFor-common/migration" type="checkbox">common/migration</label></p>
@@ -571,6 +570,7 @@
             <p><label><input id="logFor-background/background-cache" type="checkbox">background/background-cache</label></p>
             <p><label><input id="logFor-background/background" type="checkbox">background/background</label></p>
             <p><label><input id="logFor-background/browser-action-menu" type="checkbox">background/browser-action-menu</label></p>
+            <p><label><input id="logFor-background/commands" type="checkbox">background/commands</label></p>
             <p><label><input id="logFor-background/context-menu" type="checkbox">background/context-menu</label></p>
             <p><label><input id="logFor-background/handle-group-tabs" type="checkbox">background/handle-group-tabs</label></p>
             <p><label><input id="logFor-background/handle-misc" type="checkbox">background/handle-misc</label></p>
