Put tabs-group.js under background

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -553,7 +553,6 @@
             <p><label><input id="logFor-common/migration" type="checkbox">common/migration</label></p>
             <p><label><input id="logFor-common/permissions" type="checkbox">common/permissions</label></p>
             <p><label><input id="logFor-common/sidebar" type="checkbox">common/sidebar</label></p>
-            <p><label><input id="logFor-common/tabs-group" type="checkbox">common/tabs-group</label></p>
             <p><label><input id="logFor-common/tabs-internal-operation" type="checkbox">common/tabs-internal-operation</label></p>
             <p><label><input id="logFor-common/tabs-move" type="checkbox">common/tabs-move</label></p>
             <p><label><input id="logFor-common/tabs-open" type="checkbox">common/tabs-open</label></p>
@@ -582,6 +581,7 @@
             <p><label><input id="logFor-background/handle-tree-changes" type="checkbox">background/handle-tree-changes</label></p>
             <p><label><input id="logFor-background/successor-tab" type="checkbox">background/successor-tab</label></p>
             <p><label><input id="logFor-background/tab-context-menu" type="checkbox">background/tab-context-menu</label></p>
+            <p><label><input id="logFor-background/tabs-group" type="checkbox">background/tabs-group</label></p>
             <p><label><input id="logFor-background/tree-structure" type="checkbox">background/tree-structure</label></p>
         </fieldset>
         <fieldset>
