--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -549,7 +549,6 @@
             <p><label><input id="logFor-common/api-tabs" type="checkbox">common/api-tabs</label></p>
             <p><label><input id="logFor-common/bookmarks" type="checkbox">common/bookmarks</label></p>
             <p><label><input id="logFor-common/contextual-identities" type="checkbox">common/contextual-identities</label></p>
-            <p><label><input id="logFor-common/json-cache" type="checkbox">common/json-cache</label></p>
             <p><label><input id="logFor-common/migration" type="checkbox">common/migration</label></p>
             <p><label><input id="logFor-common/permissions" type="checkbox">common/permissions</label></p>
             <p><label><input id="logFor-common/sidebar" type="checkbox">common/sidebar</label></p>
@@ -579,6 +578,7 @@
             <p><label><input id="logFor-background/handle-tab-focus" type="checkbox">background/handle-tab-focus</label></p>
             <p><label><input id="logFor-background/handle-tab-multiselect" type="checkbox">background/handle-tab-multiselect</label></p>
             <p><label><input id="logFor-background/handle-tree-changes" type="checkbox">background/handle-tree-changes</label></p>
+            <p><label><input id="logFor-background/json-cache" type="checkbox">background/json-cache</label></p>
             <p><label><input id="logFor-background/successor-tab" type="checkbox">background/successor-tab</label></p>
             <p><label><input id="logFor-background/tab-context-menu" type="checkbox">background/tab-context-menu</label></p>
             <p><label><input id="logFor-background/tabs-group" type="checkbox">background/tabs-group</label></p>
