Put migration.js under background

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -521,7 +521,6 @@
             <p><label><input id="logFor-common/api-tabs" type="checkbox">common/api-tabs</label></p>
             <p><label><input id="logFor-common/bookmarks" type="checkbox">common/bookmarks</label></p>
             <p><label><input id="logFor-common/contextual-identities" type="checkbox">common/contextual-identities</label></p>
-            <p><label><input id="logFor-common/migration" type="checkbox">common/migration</label></p>
             <p><label><input id="logFor-common/permissions" type="checkbox">common/permissions</label></p>
             <p><label><input id="logFor-common/sidebar" type="checkbox">common/sidebar</label></p>
             <p><label><input id="logFor-common/tabs-internal-operation" type="checkbox">common/tabs-internal-operation</label></p>
@@ -551,6 +550,7 @@
             <p><label><input id="logFor-background/handle-tab-multiselect" type="checkbox">background/handle-tab-multiselect</label></p>
             <p><label><input id="logFor-background/handle-tree-changes" type="checkbox">background/handle-tree-changes</label></p>
             <p><label><input id="logFor-background/json-cache" type="checkbox">background/json-cache</label></p>
+            <p><label><input id="logFor-background/migration" type="checkbox">background/migration</label></p>
             <p><label><input id="logFor-background/successor-tab" type="checkbox">background/successor-tab</label></p>
             <p><label><input id="logFor-background/tab-context-menu" type="checkbox">background/tab-context-menu</label></p>
             <p><label><input id="logFor-background/tabs-group" type="checkbox">background/tabs-group</label></p>
