--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -527,7 +527,6 @@
             <p><label><input id="logFor-common/tabs-move" type="checkbox">common/tabs-move</label></p>
             <p><label><input id="logFor-common/tabs-update" type="checkbox">common/tabs-update</label></p>
             <p><label><input id="logFor-common/tabs" type="checkbox">common/tabs</label></p>
-            <p><label><input id="logFor-common/tree" type="checkbox">common/tree</label></p>
             <p><label><input id="logFor-common/tst-api" type="checkbox">common/tst-api</label></p>
             <p><label><input id="logFor-common/unique-id" type="checkbox">common/unique-id</label></p>
             <p><label><input id="logFor-common/user-operation-blocker" type="checkbox">common/user-operation-blocker</label></p>
@@ -554,6 +553,7 @@
             <p><label><input id="logFor-background/tab-context-menu" type="checkbox">background/tab-context-menu</label></p>
             <p><label><input id="logFor-background/tabs-group" type="checkbox">background/tabs-group</label></p>
             <p><label><input id="logFor-background/tabs-open" type="checkbox">background/tabs-open</label></p>
+            <p><label><input id="logFor-background/tree" type="checkbox">background/tree</label></p>
             <p><label><input id="logFor-background/tree-structure" type="checkbox">background/tree-structure</label></p>
         </fieldset>
         <fieldset>
