Move tabs-move.js under background

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -524,7 +524,6 @@
             <p><label><input id="logFor-common/permissions" type="checkbox">common/permissions</label></p>
             <p><label><input id="logFor-common/sidebar" type="checkbox">common/sidebar</label></p>
             <p><label><input id="logFor-common/tabs-internal-operation" type="checkbox">common/tabs-internal-operation</label></p>
-            <p><label><input id="logFor-common/tabs-move" type="checkbox">common/tabs-move</label></p>
             <p><label><input id="logFor-common/tabs-update" type="checkbox">common/tabs-update</label></p>
             <p><label><input id="logFor-common/tabs" type="checkbox">common/tabs</label></p>
             <p><label><input id="logFor-common/tst-api" type="checkbox">common/tst-api</label></p>
@@ -552,6 +551,7 @@
             <p><label><input id="logFor-background/successor-tab" type="checkbox">background/successor-tab</label></p>
             <p><label><input id="logFor-background/tab-context-menu" type="checkbox">background/tab-context-menu</label></p>
             <p><label><input id="logFor-background/tabs-group" type="checkbox">background/tabs-group</label></p>
+            <p><label><input id="logFor-background/tabs-move" type="checkbox">background/tabs-move</label></p>
             <p><label><input id="logFor-background/tabs-open" type="checkbox">background/tabs-open</label></p>
             <p><label><input id="logFor-background/tree" type="checkbox">background/tree</label></p>
             <p><label><input id="logFor-background/tree-structure" type="checkbox">background/tree-structure</label></p>
