Use meaningful module name

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -522,7 +522,7 @@
             <p><label><input id="logFor-common/bookmarks" type="checkbox">common/bookmarks</label></p>
             <p><label><input id="logFor-common/contextual-identities" type="checkbox">common/contextual-identities</label></p>
             <p><label><input id="logFor-common/permissions" type="checkbox">common/permissions</label></p>
-            <p><label><input id="logFor-common/sidebar" type="checkbox">common/sidebar</label></p>
+            <p><label><input id="logFor-common/sidebar-connection" type="checkbox">common/sidebar-connection</label></p>
             <p><label><input id="logFor-common/tabs-internal-operation" type="checkbox">common/tabs-internal-operation</label></p>
             <p><label><input id="logFor-common/tabs-update" type="checkbox">common/tabs-update</label></p>
             <p><label><input id="logFor-common/tabs" type="checkbox">common/tabs</label></p>
@@ -558,7 +558,7 @@
         </fieldset>
         <fieldset>
           <legend><label><input id="logFor-sidebar" type="checkbox">__MSG_config_logFor_sidebar__</label></legend>
-            <p><label><input id="logFor-sidebar/background" type="checkbox">sidebar/background</label></p>
+            <p><label><input id="logFor-sidebar/background-connection" type="checkbox">sidebar/background-connection</label></p>
             <p><label><input id="logFor-sidebar/collapse-expand" type="checkbox">sidebar/collapse-expand</label></p>
             <p><label><input id="logFor-sidebar/color" type="checkbox">sidebar/color</label></p>
             <p><label><input id="logFor-sidebar/dom-cache" type="checkbox">sidebar/dom-cache</label></p>
