Add ability to collect messaging logs

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -507,6 +507,9 @@
                      type="checkbox">
               __MSG_config_loggingQueries_label__</label>
        <button id="showQueryLogsButton">__MSG_config_showQueryLogsButton_label__</button></p>
+    <p><label><input id="loggingConnectionMessages"
+                     type="checkbox">
+              __MSG_config_loggingConnectionMessages_label__</label></p>
     <p><label><input id="debug"
                      type="checkbox">
              __MSG_config_debug_label__</label></p>
