--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -506,10 +506,10 @@
     <p><label><input id="loggingQueries"
                      type="checkbox">
               __MSG_config_loggingQueries_label__</label>
-       <button id="showQueryLogsButton">__MSG_config_showQueryLogsButton_label__</button></p>
-    <p><label><input id="loggingConnectionMessages"
+       <label><input id="loggingConnectionMessages"
                      type="checkbox">
-              __MSG_config_loggingConnectionMessages_label__</label></p>
+              __MSG_config_loggingConnectionMessages_label__</label>
+       <button id="showLogsButton">__MSG_config_showLogsButton_label__</button></p>
     <p><label><input id="debug"
                      type="checkbox">
              __MSG_config_debug_label__</label></p>
