--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -485,6 +485,10 @@
       <p>__MSG_config_userStyleRules_description_before__
          <a href="__MSG_config_userStyleRules_description_link_uri__" target="_blank">__MSG_config_userStyleRules_description_link_label__</a>
          __MSG_config_userStyleRules_description_after__</p>
+      <div id="browserThemeCustomRulesBlock">
+        <p>__MSG_config_userStyleRules_themeRules_description__</p>
+        <pre id="browserThemeCustomRules"></pre>
+      </div>
       <textarea id="userStyleRules"
                 rows="10"
                 style="width: 100%"></textarea>
