--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -525,7 +525,10 @@
     <div id="debug-configs">
       <fieldset id="group-logFor" class="collapsible collapsed">
         <legend>__MSG_config_log_caption__</legend>
-        <p><!-- git grep configs.logFor | grep -v common.js | cut -d "'" -f 2 | sed -r -e 's;^(.+)$;            <p><label><input id="logFor-\1" type="checkbox">\1</label></p>;' -->
+        <p><label><input id="logTimestamp"
+                         type="checkbox">
+                 __MSG_config_logTimestamp_label__</label></p>
+        <!-- <p>git grep configs.logFor | grep -v common.js | cut -d "'" -f 2 | sed -r -e 's;^(.+)$;            <p><label><input id="logFor-\1" type="checkbox">\1</label></p>;' -->
         <fieldset>
           <legend><label><input id="logFor-common" type="checkbox">__MSG_config_logFor_common__</label></legend>
             <p><label><input id="logFor-common/Tab" type="checkbox">common/Tab</label></p>
