Show hint to deactivate group tab #2217

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -300,7 +300,7 @@
       </ul>
     </fieldset>
 
-    <fieldset>
+    <fieldset id="autoGroupNewTabsSection">
       <legend>__MSG_config_groupTab_caption__</legend>
       <p><label><input id="autoGroupNewTabs"
                        type="checkbox">
