--- a/webextensions/resources/group-tab.html
+++ b/webextensions/resources/group-tab.html
@@ -166,6 +166,36 @@
     width: calc(var(--throbber-size) * 60);
     mask: url("/sidebar/styles/throbber.svg") no-repeat left center / 100%;
   }
+
+
+  #optionHint {
+    background: #0c0c0dCC;
+    border-radius: 0.5em;
+    box-shadow: 0.2em 0.2em 0.5em rgba(0, 0, 0, 0.35);
+    color: #efefef;
+    display: none;
+    line-height: 1;
+    margin: 1em 0 0 1em;
+    padding: 0.5em;
+    position: fixed;
+    right: 0.5em;
+    top: 0.5em;
+    z-idnex: 1000;
+  }
+
+  #optionHint a {
+    color: white;
+  }
+
+  #dismissOptionHint {
+    background: white;
+    border: none;
+    display: inline-block;
+    height: 1em;
+    mask: url("/sidebar/styles/icons/close-16.svg") no-repeat center / 100%;
+    vertical-align: text-bottom;
+    width: 1em;
+  }
 </style>
 <!--
   Don't load scripts dynamically, to prevent the tab is closed by Firefox.
@@ -177,6 +207,8 @@
 <header>
 <h1><span id="title"></span><input id="title-field" type="text"></h1>
 <p><label><input id="temporary" type="checkbox">__MSG_groupTab_temporary_label__</label></p>
+<p id="optionHint"><a href="#">__MSG_groupTab_options_label__</a>
+                   <button id="dismissOptionHint" title="__MSG_groupTab_options_dismiss__"></button></p>
 </header>
 <div id="tabs"></div>
 <span class="throbber"></span>
