Add UI for warnOnAutoGroupNewTabs

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -314,6 +314,10 @@
                                    type="number"
                                    size="3">
                             __MSG_config_autoGroupNewTabsDelayOnNewWindow_after__</label></p>
+      <p class="sub"><label><input id="warnOnAutoGroupNewTabs"
+                                   type="checkbox">
+                            __MSG_config_warnOnAutoGroupNewTabs_label__</label></p>
+
       <p><label><input id="autoGroupNewTabsFromPinned"
                        type="checkbox">
                 __MSG_config_autoGroupNewTabsFromPinned_label__</p>
