Add description images for confusing theme options #2197

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -65,8 +65,9 @@
               __MSG_config_style_none__
               __MSG_config_style_none_info__</label></li>
       </ul>
-      <p><label><input type="checkbox"
-                       name="applyBrowserTheme">
+      <p><label><input id="applyBrowserTheme"
+                       type="checkbox">
+           <img src="browser-theme.png" alt=""/>
            __MSG_config_applyBrowserTheme_label__</label></p>
     </fieldset>
     <p>__MSG_config_scrollbarMode_caption__
@@ -119,8 +120,9 @@
              __MSG_config_showCollapsedDescendantsByTooltip_label__</label></p>
     <p><label><input id="applyThemeColorToIcon"
                      type="checkbox">
+             <img src="theme-color-icon.png" alt=""/>
              __MSG_config_applyThemeColorToIcon_label__
-             __MSG_config_applyThemeColorToIcon_label_info__</label></p>
+             <br>__MSG_config_applyThemeColorToIcon_label_info__</label></p>
 
     </section>
 
