--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -129,71 +129,112 @@
 
     <section id="section-contextMenu">
     <h1>__MSG_config_context_caption__</h1>
-    <p><label><input id="emulateDefaultContextMenu"
-                     type="checkbox">
-              __MSG_config_emulateDefaultContextMenu_label__</label></p>
     <fieldset>
     <legend>__MSG_config_extraItems_caption__</legend>
     <div id="contextConfigs">
-    <p><label><input id="context_closeTabOptions_closeTree"
-                     type="checkbox">
-              __MSG_context_topLevel_prefix__
-              __MSG_context_closeTree_label__</label></p>
-    <p><label><input id="context_closeTabOptions_closeDescendants"
-                     type="checkbox">
-              __MSG_context_topLevel_prefix__
-              __MSG_context_closeDescendants_label__</label></p>
-    <p><label><input id="context_closeTabOptions_closeOthers"
-                     type="checkbox">
-              __MSG_context_topLevel_prefix__
-              __MSG_context_closeOthers_label__</label></p>
-    <hr>
-    <p><label><input id="context_reloadTree"
-                     type="checkbox">
-              __MSG_context_reloadTree_label__</label></p>
-    <p><label><input id="context_reloadDescendants"
-                     type="checkbox">
-              __MSG_context_reloadDescendants_label__</label></p>
-    <p><label><input id="context_closeTree"
-                     type="checkbox">
-              __MSG_context_closeTree_label__</label></p>
-    <p><label><input id="context_closeDescendants"
-                     type="checkbox">
-              __MSG_context_closeDescendants_label__</label></p>
-    <p><label><input id="context_closeOthers"
-                     type="checkbox">
-              __MSG_context_closeOthers_label__</label></p>
-    <p><label><input id="context_collapseTree"
-                     type="checkbox">
-              __MSG_context_collapseTree_label__</label></p>
-    <p><label><input id="context_collapseAll"
-                     type="checkbox">
-              __MSG_context_collapseAll_label__</label></p>
-    <p><label><input id="context_expandTree"
-                     type="checkbox">
-              __MSG_context_expandTree_label__</label></p>
-    <p><label><input id="context_expandAll"
-                     type="checkbox">
-              __MSG_context_expandAll_label__</label></p>
-    <p><label><input id="context_bookmarkTree"
-                     type="checkbox">
-              __MSG_context_bookmarkTree_label__</label></p>
-    <p class="sub"><label><input id="bookmarksPermissionGranted"
+    <table>
+      <thead>
+        <tr>
+          <th>__MSG_config_extraItems_topLevel__</th>
+          <th>__MSG_config_extraItems_subMenu__</th>
+          <td></td>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td><label><input id="context_topLevel_reloadTree"
+                            type="checkbox"></label></td>
+          <td><label><input id="context_reloadTree"
+                            type="checkbox"></label></td>
+          <th><label for="context_reloadTree">__MSG_context_reloadTree_label__</label></th>
+        </tr>
+        <tr>
+          <td><label><input id="context_topLevel_reloadDescendants"
+                            type="checkbox"></label></td>
+          <td><label><input id="context_reloadDescendants"
+                            type="checkbox"></label></td>
+          <th><label for="context_reloadDescendants">__MSG_context_reloadDescendants_label__</label></th>
+        </tr>
+        <tr>
+          <td><label><input id="context_topLevel_closeTree"
+                            type="checkbox"></label></td>
+          <td><label><input id="context_closeTree"
+                            type="checkbox"></label></td>
+          <th><label for="context_closeTree">__MSG_context_closeTree_label__</label></th>
+        </tr>
+        <tr>
+          <td><label><input id="context_topLevel_closeDescendants"
+                            type="checkbox"></label></td>
+          <td><label><input id="context_closeDescendants"
+                            type="checkbox"></label></td>
+          <th><label for="context_closeDescendants">__MSG_context_closeDescendants_label__</label></th>
+        </tr>
+        <tr>
+          <td><label><input id="context_topLevel_closeOthers"
+                            type="checkbox"></label></td>
+          <td><label><input id="context_closeOthers"
+                            type="checkbox"></label></td>
+          <th><label for="context_closeOthers">__MSG_context_closeOthers_label__</label></th>
+        </tr>
+        <tr>
+          <td><label><input id="context_topLevel_collapseTree"
+                            type="checkbox"></label></td>
+          <td><label><input id="context_collapseTree"
+                            type="checkbox"></label></td>
+          <th><label for="context_collapseTree">__MSG_context_collapseTree_label__</label></th>
+        </tr>
+        <tr>
+          <td><label><input id="context_topLevel_collapseAll"
+                            type="checkbox"></label></td>
+          <td><label><input id="context_collapseAll"
+                            type="checkbox"></label></td>
+          <th><label for="context_collapseAll">__MSG_context_collapseAll_label__</label></th>
+        </tr>
+        <tr>
+          <td><label><input id="context_topLevel_expandTree"
+                            type="checkbox"></label></td>
+          <td><label><input id="context_expandTree"
+                            type="checkbox"></label></td>
+          <th><label for="context_expandTree">__MSG_context_expandTree_label__</label></th>
+        </tr>
+        <tr>
+          <td><label><input id="context_topLevel_expandAll"
+                            type="checkbox"></label></td>
+          <td><label><input id="context_expandAll"
+                            type="checkbox"></label></td>
+          <th><label for="context_expandAll">__MSG_context_expandAll_label__</label></th>
+        </tr>
+        <tr>
+          <td><label><input id="context_topLevel_bookmarkTree"
+                            type="checkbox"></label></td>
+          <td><label><input id="context_bookmarkTree"
+                            type="checkbox"></label></td>
+          <th><label for="context_bookmarkTree">__MSG_context_bookmarkTree_label__</label></th>
+        </tr>
+        <tr>
+          <td><label><input id="context_topLevel_groupTabs"
+                            type="checkbox"></label></td>
+          <td><label><input id="context_groupTabs"
+                            type="checkbox"></label></td>
+          <th><label for="context_groupTabs">__MSG_context_groupTabs_label__</label></th>
+        </tr>
+      </tbody>
+    </table>
+    </div>
+    </fieldset>
+    <fieldset>
+    <legend><label><input id="bookmarksPermissionGranted"
                                  type="checkbox">
-                          __MSG_config_requestPermissions_bookmarks__</label></p>
-    <p class="sub with-bookmarks-permission"><label>__MSG_config_bookmarkTreeFolderName_before__
+                          __MSG_config_requestPermissions_bookmarks__</label></legend>
+    <p class="with-bookmarks-permission"><label>__MSG_config_bookmarkTreeFolderName_before__
                           <input id="bookmarkTreeFolderName"
                                  type="text"
                                  style="width: 100%">
                           __MSG_config_bookmarkTreeFolderName_after__</label></p>
-    <p class="sub with-bookmarks-permission"><label for="bookmarkTreeFolderName">__MSG_config_bookmarkTreeFolderName_description__</label></p>
-    <p class="sub with-bookmarks-permission"><label>__MSG_config_defaultBookmarkParentId_label_before__
+    <p class="with-bookmarks-permission"><label for="bookmarkTreeFolderName">__MSG_config_bookmarkTreeFolderName_description__</label></p>
+    <p class="with-bookmarks-permission"><label>__MSG_config_defaultBookmarkParentId_label_before__
                           <button id="defaultBookmarkParentChooser"></button>
                           __MSG_config_defaultBookmarkParentId_label_after__</label></p>
-    <p><label><input id="context_groupTabs"
-                     type="checkbox">
-              __MSG_context_groupTabs_label__</label></p>
-    </div>
     </fieldset>
     </section>
 
