Output more debuggable logs

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -588,7 +588,7 @@
             <p><label><input id="logFor-common/sidebar-connection" type="checkbox">common/sidebar-connection</label></p>
             <p><label><input id="logFor-common/tabs-internal-operation" type="checkbox">common/tabs-internal-operation</label></p>
             <p><label><input id="logFor-common/tabs-update" type="checkbox">common/tabs-update</label></p>
-            <p><label><input id="logFor-common/tabs" type="checkbox">common/tabs</label></p>
+            <p><label><input id="logFor-common/tree-behavior" type="checkbox">common/tree-behavior</label></p>
             <p><label><input id="logFor-common/tst-api" type="checkbox">common/tst-api</label></p>
             <p><label><input id="logFor-common/unique-id" type="checkbox">common/unique-id</label></p>
             <p><label><input id="logFor-common/user-operation-blocker" type="checkbox">common/user-operation-blocker</label></p>
