Close temporary group tab when there is one or less child, if it was opened as a successor of a closed parent tab #2253

--- a/webextensions/resources/group-tab.html
+++ b/webextensions/resources/group-tab.html
@@ -211,7 +211,8 @@
 <main>
 <header>
 <h1><span id="title"></span><input id="title-field" type="text"></h1>
-<p><label><input id="temporary" type="checkbox">__MSG_groupTab_temporary_label__</label></p>
+<p><label><input id="temporary" type="checkbox">__MSG_groupTab_temporary_label__</label>
+   <label><input id="temporaryAggressive" type="checkbox">__MSG_groupTab_temporaryAggressive_label__</label></p>
 <p id="optionHint"><a href="#">__MSG_groupTab_options_label__</a>
                    <button id="dismissOptionHint" title="__MSG_groupTab_options_dismiss__"></button></p>
 </header>
