Add UI to on/off permisssions #2282

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -543,6 +543,11 @@
                 rows="10"
                 style="width: 100%"></textarea>
     </fieldset>
+    <fieldset id="externalAddonPermissionsGroup">
+      <legend>__MSG_config_externalAddonPermissions_label__</legend>
+      <p>__MSG_config_externalAddonPermissions_description__</p>
+      <ul id="externalAddonPermissions"></ul>
+    </fieldset>
     </section>
 
     <hr/>
