Emphasize important notice

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -545,7 +545,7 @@
     </fieldset>
     <fieldset id="externalAddonPermissionsGroup">
       <legend>__MSG_config_externalAddonPermissions_label__</legend>
-      <p>__MSG_config_externalAddonPermissions_description__</p>
+      <p id="externalAddonPermissionsGroupDescription"></p>
       <ul id="externalAddonPermissions"></ul>
     </fieldset>
     </section>
