Add UI to control incognito permissions #2282

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -546,7 +546,15 @@
     <fieldset id="externalAddonPermissionsGroup">
       <legend>__MSG_config_externalAddonPermissions_label__</legend>
       <p id="externalAddonPermissionsGroupDescription"></p>
-      <ul id="externalAddonPermissions"></ul>
+      <table>
+        <thead>
+          <tr>
+            <th>__MSG_config_externalAddonPermissions_header_main__</th>
+            <th>__MSG_config_externalAddonPermissions_header_incognito__</th>
+          </tr>
+        </thead>
+        <tbody id="externalAddonPermissions"></tbody>
+      </table>
     </fieldset>
     </section>
 
