--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -543,6 +543,13 @@
                 rows="10"
                 style="width: 100%"></textarea>
     </fieldset>
+    </section>
+
+    <section id="section-addons">
+    <h1>__MSG_config_addons_caption__</h1>
+    <p>__MSG_config_addons_description_before__
+       <a href="__MSG_config_addons_description_link_uri__" target="_blank">__MSG_config_addons_description_link_label__</a>
+       __MSG_config_addons_description_after__</p>
     <fieldset id="externalAddonPermissionsGroup">
       <legend>__MSG_config_externalAddonPermissions_label__</legend>
       <p id="externalAddonPermissionsGroupDescription"></p>
