--- a/webextensions/resources/startup.html
+++ b/webextensions/resources/startup.html
@@ -101,6 +101,9 @@
    __MSG_message_startup_description_2__
    <em>__MSG_extensionName__</em>
    __MSG_message_startup_description_3__</p>
+<p>__MSG_config_addons_description_before__
+   <a href="__MSG_helper_addons_list_link_uri__" target="_blank">__MSG_config_addons_description_link_label__</a>
+   __MSG_config_addons_description_after__</p>
 
 <p>__MSG_message_startup_requestPermissions_description__</p>
 <div class="permissions">
