Add ability to deactivate tree rendering in group tabs #2290

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -365,6 +365,9 @@
       <p><label><input id="autoGroupNewTabsFromPinned"
                        type="checkbox">
                 __MSG_config_autoGroupNewTabsFromPinned_label__</p>
+      <p><label><input id="renderTreeInGroupTabs"
+                       type="checkbox">
+                __MSG_config_renderTreeInGroupTabs_label__</p>
     </fieldset>
 
     </section>
