Add an option to specify max faviconized tabs for each row #2284

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -113,6 +113,11 @@
     <p><label><input id="faviconizePinnedTabs"
                      type="checkbox">
              __MSG_config_faviconizePinnedTabs_label__</label></p>
+    <p class="sub"><label>__MSG_config_maxFaviconizedPinnedTabsInOneRow_label_before__
+              <input id="maxFaviconizedPinnedTabsInOneRow"
+                     type="number"
+                     size="3">
+             __MSG_config_maxFaviconizedPinnedTabsInOneRow_label_after__</label></p>
     <p><label><input id="animation"
                      type="checkbox">
              __MSG_config_animation_label__</label></p>
