--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -16,6 +16,7 @@
     <style id="user-style-rules" type="text/css"></style>
   </head>
   <body>
+    <div id="tabbar-container">
     <div id="tabbar" class="vbox">
       <div id="all-tabs">
       </div>
@@ -44,6 +45,12 @@
         <button class="newtab-button"
                 title="__MSG_tabbar_newTabButton_tooltip__"></button>
       </div>
+    </div>
+    </div>
+    <div id="subpanel-container">
+      <iframe id="subpanel"
+              type="content"
+              src="about:blank"></iframe>
     </div>
     <ul id="newtab-action-selector">
       <li data-value="independent">__MSG_tabbar_newTabAction_independent_label__</li>
