--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -48,6 +48,7 @@
     </div>
     </div>
     <div id="subpanel-container">
+      <div id="subpanel-resizer"></div>
       <iframe id="subpanel"
               type="content"
               src="about:blank"></iframe>
