Add subpanel toggler

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -48,7 +48,10 @@
     </div>
     </div>
     <div id="subpanel-container">
-      <div id="subpanel-resizer"></div>
+      <div id="subpanel-header">
+        <span id="subpanel-chooser">suppanel</span>
+        <span id="subpanel-toggler"></span>
+      </div>
     </div>
     <ul id="newtab-action-selector">
       <li data-value="independent">__MSG_tabbar_newTabAction_independent_label__</li>
