Add subpanel selector

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -49,10 +49,14 @@
     </div>
     <div id="subpanel-container">
       <div id="subpanel-header">
-        <span id="subpanel-chooser">suppanel</span>
-        <span id="subpanel-toggler"></span>
+        <span id="subpanel-header-main">
+          <button id="subpanel-selector-anchor"
+                  data-menu-ui="subpanel-selector"></button>
+        </span>
+        <button id="subpanel-toggler"></button>
       </div>
     </div>
+    <ul id="subpanel-selector"></ul>
     <ul id="newtab-action-selector">
       <li data-value="independent">__MSG_tabbar_newTabAction_independent_label__</li>
       <li data-value="child">__MSG_tabbar_newTabAction_child_label__</li>
