--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -55,6 +55,7 @@
         </span>
         <button id="subpanel-toggler"></button>
       </div>
+      <div id="subpanel-screen"></div>
     </div>
     <ul id="subpanel-selector"></ul>
     <ul id="newtab-action-selector">
