Show icon for subpanel selector

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -51,7 +51,10 @@
       <div id="subpanel-header">
         <span id="subpanel-header-main">
           <button id="subpanel-selector-anchor"
-                  data-menu-ui="subpanel-selector"></button>
+                  data-menu-ui="subpanel-selector">
+            <span class="icon"><img></span>
+            <span class="label"></span>
+          </button>
         </span>
         <button id="subpanel-toggler"></button>
       </div>
