Allow to go to options page when permission notification is clicked

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -201,7 +201,7 @@
     </table>
     </div>
     </fieldset>
-    <fieldset>
+    <fieldset id="bookmarksPermissionSection">
     <legend><label><input id="bookmarksPermissionGranted"
                                  type="checkbox">
                           __MSG_config_requestPermissions_bookmarks__</label></legend>
