Add link to the options page itself

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -553,6 +553,7 @@
     <section id="section-debug">
     <h1>__MSG_config_debug_caption__</h1>
     <ul>
+      <li><a id="link-optionsPage" target="_blank">__MSG_config_title__</a>
       <li><a id="link-startupPage" target="_blank">__MSG_config_link_startupPage_label__</a></li>
       <li><a id="link-groupPage" target="_blank">__MSG_config_link_groupPage_label__</a></li>
       <li><a id="link-runTests" target="_blank">__MSG_config_runTests_label__</a>
