Add option UI to save session data to windows

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -506,6 +506,9 @@
                      type="checkbox">
              __MSG_config_useCachedTree_label__</label></p>
     <p class="sub">__MSG_config_useCachedTree_description__</p>
+    <p class="sub"><label><input id="storeCacheAsWindowValue"
+                                 type="checkbox">
+                          __MSG_config_storeCacheAsWindowValue_label__</label></p>
     <p><label><input id="simulateCloseTabByDblclick"
                      type="checkbox">
               __MSG_config_simulateCloseTabByDblclick_label__</label></p>
