Expose "no control" option for new tab position #1220

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -225,6 +225,7 @@
       <legend>__MSG_config_newTabButton_caption__</legend>
     <p><label>__MSG_config_autoAttachOnNewTabButtonMiddleClick_before__
               <select id="autoAttachOnNewTabButtonMiddleClick">
+                <option value="-1">__MSG_config_autoAttachOnNewTabButtonMiddleClick_noControl__</option>
                 <option value="0">__MSG_config_autoAttachOnNewTabButtonMiddleClick_independent__</option>
                 <option value="1">__MSG_config_autoAttachOnNewTabButtonMiddleClick_child__</option>
                 <option value="2">__MSG_config_autoAttachOnNewTabButtonMiddleClick_sibling__</option>
@@ -250,6 +251,7 @@
       <legend>__MSG_config_newTabAction_caption__</legend>
     <p><label>__MSG_config_autoAttachOnNewTabCommand_before__
               <select id="autoAttachOnNewTabCommand">
+                <option value="-1">__MSG_config_autoAttachOnNewTabCommand_noControl__</option>
                 <option value="0">__MSG_config_autoAttachOnNewTabCommand_independent__</option>
                 <option value="1">__MSG_config_autoAttachOnNewTabCommand_child__</option>
                 <option value="2">__MSG_config_autoAttachOnNewTabCommand_sibling__</option>
@@ -265,6 +267,7 @@
                            __MSG_config_guessNewOrphanTabAsOpenedByNewTabCommandUrl_after__</label></p>
     <p><label>__MSG_config_autoAttachOnDuplicated_before__
               <select id="autoAttachOnDuplicated">
+                <option value="-1">__MSG_config_autoAttachOnDuplicated_noControl__</option>
                 <option value="0">__MSG_config_autoAttachOnDuplicated_independent__</option>
                 <option value="1">__MSG_config_autoAttachOnDuplicated_child__</option>
                 <option value="2">__MSG_config_autoAttachOnDuplicated_sibling__</option>
@@ -281,6 +284,7 @@
       <legend>__MSG_config_sameSiteOrphan_caption__</legend>
       <p><label>__MSG_config_autoAttachSameSiteOrphan_before__
                 <select id="autoAttachSameSiteOrphan">
+                  <option value="-1">__MSG_config_autoAttachSameSiteOrphan_noControl__</option>
                   <option value="0">__MSG_config_autoAttachSameSiteOrphan_independent__</option>
                   <option value="1">__MSG_config_autoAttachSameSiteOrphan_child__</option>
                   <option value="2">__MSG_config_autoAttachSameSiteOrphan_sibling__</option>
